<resources>
    <string name="app_name">Ramji Ki Sena</string>
    <string name="sposor">Jayshri Gayatri Food Products Pvt. Ltd. Milk magic</string>
    <string name="DailyDarshan"> Daily Darshan &amp; Ram naam Meditation 👉</string>
    <string name="Imp">🚩 Important temples of Ayodhya </string>
    <string name="missions">🎯 Our Missions </string>
    <string name="glory">📖 Glory of Ram naam</string>
    <string name="write">✍️ Writing experience &amp; feedback \n </string>
    <string name="fb">Facebook </string>
    <string name="youtube"> Youtube </string>
    <string name="ramChant" translatable="false">🚩 जय श्री राम</string>
    <string name="hanumanChant" translatable="false">🚩 जय श्री हनुमान </string>
    <string name="login" translatable="false">राम नाम लेखन हेतु लॉगिन/ \n रजिस्टर करे -  Login / Register \n here </string>
    <string name="loginHint" translatable="false">लॉगिन आईडी / <b>Login ID</b></string>
    <string name="passwordHint" translatable="false"> पासवर्ड /<b> Password </b> </string>
    <string name="loginButton" translatable="false">लॉगिन / <b> Login </b> </string>
    <string name="registerButton" translatable="false">रजिस्टर /<b> Register </b> </string>
    <string name="welcome">Welcome to Ramji Ki Sena</string>
    <string name="MobHint" translatable="false">मोबाइल नंबर.<sup>*</sup> / <b>Mobile No.</b><sup>*</sup></string>
    <string name="EnterContact" translatable="false">Enter Contact Number for \n Login /  नंबर दर्ज करें</string>
    <string name="Register" translatable="false"> नये सदस्यता के लिए रजिस्टर करें/\nNew User Registration Form </string>
    <string name="userLoginId" translatable="false">यूज़र लॉगिन आईडी / <b>User Login id</b></string>
    <string name="FullName" translatable="false">पूरा नाम / <b>Full Name</b></string>
    <string name="City" translatable="false">शहर / <b>City</b></string>
    <string name="dialog" translatable="false"> आपका रामनाम धन Save नहीं हुआ है, कृपया Save करें \n Your Ramnaam is not saved. Please save!</string>


    <string name="mission" translatable="false">रामजी की सेना वेबसाइट का मुख्य उद्देश्य श्री राम नाम का प्रचार एवं लेखन करवाना है। आप इस पावन वेवसाइट <b>www.ramjikisena.com</b> में जाकर अपना एकाउंट रजिस्टर कर सकते है,फिर रजिस्टर करने के बाद जब आप लॉगिन करेंगे तो आपका एक अलग अकाउंट बन जायेगा और आप जितनी बार भी राम नाम लिखेंगे वो राम नाम ऑनलाइन संग्रहित हो जायेगा। आप जितने भी राम नाम लिखते है , हम सेवक उनका प्रिंटआउट निकलवा के श्री अयोध्या जी धाम ले जाते है। सर्वप्रथम हम आप सभी के द्वारा लिखे हुए राम नाम धन की सूचि एवं राम नाम धन का प्रिंटआउट श्री हनुमान जी महाराज जी को दिखाते है और फिर श्री कनक भवन जो कि श्री अयोध्या जी धाम में श्री सीताराम जी भगवान् जी का प्रधान मंदिर है वहां जाकर आपके द्वारा लिखे हुए राम नाम धन को उनके श्री चरणों में समर्पित करते है। उसके उपरांत आपका राम नाम धन श्री राम बैंक अयोधया जी में जमा करवाते है। एक बार फिर सभी भक्तो से अनुरोध है कृपया ज्यादा से ज्यादा राम नाम लिखे एवं अपने मित्रों परिजनों और अन्य को प्रेरित करे राम नाम लिखवाने से। प्रभु श्री राम जी की कृपा सभी पे बनी रहे इसी आशा के साथ सेवक टीम की राम राम ।
    </string>

    <string name="list"> <b>1. Saryu River\n
        2. Ram ki Paidi\n
        3. Nageshwarnath Temple\n
        4. Kaleram Ji\n
        5. Tulsi Memorial\n
        5. Tulsi Memorial\n
        6. Shri Janaki Palace\n
        7. Shri Valmiki Ramayan Temple(Luv Kush Temple)\n
        8. Hanuman Bagh\n
        9. Janaki Vallabh\n
        10. Choti Devkali Temple\n
        11. Hanuman Gadhi - (Must Visit)\n
        12. Dasharath Mahal\n
        13. Shri Ramjanmbhoomi- (Must Visit)\n
        14. Kanak Bhavan - (Must Visit)\n
        15. Ram katha Museum\n
        16. Birla Temple\n
        17. Mani Parvat Temple\n </b>
    </string>

    <string name="important_tourist_places_ayodhya">
        <b>Important tourist places in Ayodhya\n\n</b>
        (All the temples are within 3-4KM range from Ayodhya Railway Station)
    </string>


    <!-- Glory of Ramnaam content -->
    <string name="content_glory">There is neither chanting nor austerity in the Kali-yuga. Only the name of Rama is the only support of the creature in this Kalikala. Shri Ram Chandra ji is a simple, merciful and kind person, his name is the only one who gives life to the creature and is the ultimate welfare. Keeping this objective in mind, this website has been constructed. Our request to you is to chant the name of Ram as much as possible. In this, we all have welfare.

        \n\n1,25,000 - All sins accumalated in this birth begin to be destroyed.

        \n\n2,25,000 -The sins of life are destroyed and all evil houses start redressing.

        \n\n5,00,000 -The devotion of the feet increases with the grace of Lord Rama.

        \n\n10,00,000 -All sins of past lives are destroyed.

        \n\n25,00,000 -The nightmare of life is eradicated and all the opulence part and the fruits of liberation are reaped.

        \n\n50,00,000 -All kinds of virtues and yajna are reaped.

        \n\n75,00,000 -Sins of many births is destroyed and unbroken devotion to Lord Rama is found.

        \n\n1,00,00,000-The Ashwamedha yagna results in a double form are reaped.
    </string>
    <!-- End of Glory of Ramnaam content -->

    <!-- Writing experience content -->
    <string name="content_writing_experience">
        <![CDATA[Jai Siyaram ji devotees! This website has been created by the grace of Shri Hanuman Ji Maharaj Ji to write Ram Naam online. Over the years the name of Ram is generally written on the books, but in today&apos;s era, we have to put a little tireless effort in writing the name of Ram in office, train, bus or any other place, so this website has been created. Now you can write Ram Naam online anywhere and anytime.It&apos;s a humble request to all the devotees, please tell your experience and suggestions of writing Ram Naam so that we can make amendments in this website &amp; make it better.
        \n\n।। Jai Shri Ram ।।
            \n।। Jai Hanuman ।।
        \n\nPlease give your Feedback at \nramjikisena@gmail.com]]>
    </string>

    <!-- End of Writing experience content -->

    <!-- About Fragment Content -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="admin_bottom" translatable="false"><![CDATA[Copyright © 2024 www.ramjikisena.com \n Developed & Maintained by I-NextETS]]></string>

    <string name="about" translatable="false">❖ श्री पार्वती प्रसन्न्ता मंत्र\n
        ❖ नवग्रह शांति दुर्भाग्य नाशक मंत्र\n
        ❖ प्रभु दर्शन पाने का मंत्र\n
        ❖ समाज सेवा का मंत्र\n
        ❖ श्री राम कृपा पाने का मंत्र\n
        ❖ भाग्य परिवर्तन करने का मंत्र\n
        ❖ कार्य सिद्धि का मंत्र\n\n
        ❖ शत्रु नाशक मंत्र\n
        ❖ स्त्रियों को लाभ का मंत्र\n
        ❖ राम कृपा विशेष मंत्र\n
        ❖ प्राण संकट टालने का मंत्र\n
        ❖ शत्रु को भयहित करने का मंत्र\n
        ❖ समस्त विपत्तियां दूर करने का मंत्र\n
        ❖ सुख समृद्धि दायक मंत्र\n\n
        ❖ हनुमान चालीसा विधि सहित\n
        ❖ सृष्टि अनुकूल मंत्र\n
        ❖ देव अनुकूल करने का मंत्र\n
        ❖ दुख तथा पाप नाशक मंत्र\n
        ❖ स्वप्न के भय दूर करने का मंत्र\n
        ❖ श्रोता मुक्त करने का मंत्र\n
        ❖ विवाह तथा नौकरी धंधा के लिए मंत्र\n\n
        ❖ सौभाग्य एव सुख समृद्धि के लिए मंत्र\n
        ❖ पुत्र सुख के लिए मंत्र\n
        ❖ कन्या की शादी के लिए मंत्र\n
        ❖ स्मरण शक्ति बढ़ाने के लिए मंत्र\n
        ❖ रोजगार पाने का मंत्र\n
        ❖ दारिद्रता नाशक मंत्र\n
        ❖ विष नाशक मंत्र\n\n
        ❖ सुख समृद्धि पाने का मंत्र\n
        ❖ शत्रु को मित्र बनाने का मंत्र\n
        ❖ प्रेम बढ़ाने का मंत्र\n
        ❖ कार्य सिद्धि का मंत्र\n
        ❖ यात्रा की सफलता का मंत्र\n
        ❖ उपद्रव शांत करने का मंत्र\n
        ❖ सिद्धि कारक मंत्र\n\n
        ❖ उत्सव करणे का मंत्र\n
        ❖ मोहनी मंत्र\n
        ❖ धन प्राप्ति का मंत्र\n
        ❖ उत्सव कारवाने का मंत्र\n
        ❖ शत्रु को परास्त करने का मंत्र\n
        ❖ मनुष्य की शुद्धि का मंत्र\n
        ❖ अनुभूति का मंत्र\n\n
        ❖ हनुमत प्रसन्न का मंत्र\n
        ❖ मोक्ष प्रदायक मंत्र\n
        ❖ श्री जानकी की प्रसन्न्ता का मंत्र\n
        ❖ शरीर स्वस्थ रखने का मंत्र\n
        ❖ ज्वार उतारने का मंत्र\n
        ❖ सामाजिक सुख का मंत्र\n
        ❖ अंतरमन जागृत करने का मंत्र\n\n
        ❖ भाग्य जगाने का मंत्र\n
        ❖ रोग मिटाने का राम मंत्र\n
        ❖ परिवार प्रेम बढ़ाने का मंत्र\n
        ❖ स्वरूप श्री राम मंत्र\n
        ❖ कार्य सिद्धि का मंत्र\n
        ❖ वशीकरण का मंत्र\n
        ❖ सकल मनोरथ सिद्धि मंत्र\n\n
        ❖ सभा में सम्मान पाने का मंत्र\n
        ❖ निंदा रोकने का मंत्र\n
        ❖ संशय निवारण मंत्र\n
        ❖ श्री पार्वती प्रसन्न मंत्र\n
        ❖ विश नाशक मंत्र\n
        ❖ मासिक धर्म तथा पीड़ा स्तम्भन मंत्र\n
        ❖ तत्व ज्ञान पाने का मंत्र\n\n
        ❖ घाव एव पीड़ा नाशक मंत्र\n
        ❖ मोच नाशक मंत्र\n
        ❖ आड वृद्धि नाशक मंत्र\n
        ❖ सर्वोपरी मंत्र\n
        ❖ श्री राम पंचदशी यंत्र\n
        ❖ राम चालीसा विधि सहित\n
        ❖ हनुमान चालीसा विधि सहित\n</string>
    <string name="ad" translatable="false">निम्नालिखित मंत्र जाप से लाभ प्राप्त करने हेतु परमात्मा कृपा प्राप्त\n श्री चन्द्रशेखर जी महाराज\n से मंत्र प्राप्त करें</string>
    <string name="lekhan_history">Lekhan\nHistory</string>
    <string name="jay_shri_ram">Jay Shri Ram - 🙎‍</string>
    <string name="home">Home</string>
    <string name="your_rank">Your Rank</string>
    <string name="current_ramnaam_count">Current Ramnaam Count</string>
    <string name="total_ramnaam_count">Total Ramnaam Count</string>
    <string name="total_mala_count">Total Mala Count</string>
    <string name="glory_of_ramnaam">Glory of Ramnaam</string>
    <string name="major_temples_of_n_ayodhya">Major Temples of\nAyodhya</string>
    <string name="daily_ramnaam_counts">Daily Ramnaam Counts</string>
    <string name="our_mission">Our Mission</string>
    <string name="ram_naam_writing_n_experience_amp_feedback"><![CDATA[Ram Naam Writing \n Experience & Feedback]]></string>
    <string name="post_your_ad">\u0020Post Your Ad</string>
    <string name="about2">\u0020About</string>
    <string name="gallery">\u0020Gallery</string>
    <string name="share">\u0020Share</string>
    <string name="feedback">\u0020Feedback</string>
    <string name="help_amp_support"><![CDATA[\u0020Help & Support]]></string>
    <string name="contact_us">\u0020Contact Us</string>
    <string name="about_us">About us</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="log_nout">\u0020Log Out</string>
    <string name="post_your_ad2">Post Your Ad!</string>
    <string name="write_the_content_of_your_ad">Write the content of your ad...</string>
    <string name="your_name">Your Name</string>
    <string name="your_contact_no">Your Contact no.</string>
    <string name="send">Send</string>
    <string name="date">Date</string>
    <string name="count">Count</string>
    <string name="how_can_we_help_you">How can we help you ?</string>
    <string name="type_your_help_or_support_message_here">Type your help or support message here...</string>
    <string name="your_valuable_feedback">Your Valuable Feedback!</string>
    <string name="write_your_valuable_feedback_here">Write your valuable feedback here...</string>
    <string name="call">Call :</string>
    <string name="email">Email :</string>
    <string name="english2">English</string>
    <string name="choose_lang">Choose your language</string>
    <string name="rank_n">Rank \n</string>
    <string name="name_n">Name\n</string>
    <string name="today_s_count">Today\'s Count</string>
    <string name="total_ncount">Total \nCount</string>
    <string name="all_devotees">All Devotees</string>
    <string name="all_devotees2">ALL DEVOTEES</string>


</resources>