<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/icon_logo_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/drawer_postAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/drawer_postAd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_your_ad"
            android:layout_marginStart="10dp"
            android:textColor="@color/brown"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:drawableStartCompat="@drawable/nav_add_post"
            android:focusable="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/drawer_about2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about2"
            android:layout_marginStart="10dp"
            android:textColor="@color/brown"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:drawableStartCompat="@drawable/nav_about"
            android:focusable="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/drawer_gallery2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:layout_marginStart="10dp"
            android:textColor="@color/brown"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:drawableStartCompat="@drawable/nav_gallery"
            android:focusable="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/drawer_share2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_marginStart="10dp"
            android:textColor="@color/brown"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:drawableStartCompat="@drawable/nav_share"
            android:focusable="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/drawer_feedback2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:layout_marginStart="10dp"
            android:textColor="@color/brown"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:drawableStartCompat="@drawable/nav_feedback"
            android:focusable="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/drawer_help2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_amp_support"
            android:layout_marginStart="10dp"
            android:textColor="@color/brown"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:drawableStartCompat="@drawable/nav_about"
            android:focusable="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/drawer_call2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:layout_marginStart="10dp"
            android:textColor="@color/brown"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:drawableStartCompat="@drawable/nav_call"
            android:focusable="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/drawer_logout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_nout"
            android:layout_marginStart="10dp"
            android:textColor="@color/brown"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:drawableStartCompat="@drawable/nav_logout"
            android:focusable="true" />

    </LinearLayout>


</LinearLayout>