<?xml version="1.0" encoding="utf-8"?>

<!-- parernt layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_img"
    tools:context=".drawerfiles.Gallery">

    <!-- Scroll View -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- inner Linear Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Sponsored company name -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/brown">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/movingText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sposor"
                        android:textColor="@color/white"
                        android:textSize="13dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/sponsorLogo"
                        android:layout_marginLeft="5dp"
                        android:layout_width="25dp"
                        android:layout_height="20dp"
                        android:src="@drawable/milk_magic_icon" />

                </LinearLayout>



            </androidx.cardview.widget.CardView>
            <!--End of Sponsored company name -->


            <!-- Logo and app name -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/app_img"
                        android:layout_width="45dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/img_bg"
                        android:src="@drawable/icon_logoo"
                        app:shapeAppearanceOverlay="@style/roundedImageView" />


                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/app_name"
                        android:textColor="@color/brown"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/HomeButton"
                        android:layout_width="60dp"
                        android:layout_height="36dp"
                        android:backgroundTint="@color/brown"
                        android:textColor="@color/white"
                        android:text="@string/home"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:textSize="12sp" />

                   <!-- <Button
                        android:id="@+id/menuButton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/baseline_menu_24" />-->
                </LinearLayout>


            </androidx.cardview.widget.CardView>
            <!-- End of Logo and app name -->


            <!-- Ayodhya's Ramji Image -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ayodhya_ramji_photo" />
            <!-- End of Ayodhya's Ramji Image -->


            <!-- Go to section -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/brown">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/DailyDarshan"
                        android:textColor="@color/yellow"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/ImpTemples"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Imp"
                            android:layout_marginRight="5dp"
                            android:textColor="@color/yellow"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:background="?android:attr/selectableItemBackground"
                            android:clickable="true"/>

                        <TextView
                            android:id="@+id/ourMission"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/missions"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/yellow"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:background="?android:attr/selectableItemBackground"
                            android:clickable="true"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/gloryOfRamNaam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/glory"
                        android:textColor="@color/yellow"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"/>

                    <TextView
                        android:id="@+id/writingExperience"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/write"
                        android:textColor="@color/yellow"
                        android:textSize="16dp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>
            <!--End of Go to section -->

            <!--  Sliding Image Section Seciton -->
            <androidx.cardview.widget.CardView
                android:id="@+id/gallery_cardview"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:backgroundTint="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gallery"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textColor="@color/red"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@color/gray" />

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/viewPager"
                        android:layout_width="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:layout_height="wrap_content" >


                    </androidx.viewpager.widget.ViewPager>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- End of Sliding Image Seciton -->


            <!-- Footer Section -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/brown">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="25dp"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/fb"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:text="@string/fb"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="25dp"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/youtube"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/youtube"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:id="@+id/movingTextBottom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sposor"
                            android:textColor="@color/white"
                            android:textSize="13dp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/sponsorLogoBottom"
                            android:layout_marginLeft="5dp"
                            android:layout_width="25dp"
                            android:layout_height="20dp"
                            android:src="@drawable/milk_magic_icon" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- End of Footer Section -->

        </LinearLayout>
        <!-- End of Inner Layout -->
    </ScrollView>
    <!-- End of ScrollView -->
</LinearLayout>
    <!-- End of parent layout -->